Fixes narrow navbar spacing, increases h1-3 sizes, and fixes overflow issues.

--- a/styles.css
+++ b/styles.css
@@ -127,9 +127,9 @@
     .navbar-font-specs { font-size: 1rem; }
   }
   @media only screen and (max-width: 400px) {
-    .h1-specs { font-size: 1.5rem; }
-    .h2-specs { font-size: 1.3rem; }
-    .h3-specs { font-size: 1.1rem; }
+    .h1-specs { font-size: 1.7rem; }
+    .h2-specs { font-size: 1.5rem; }
+    .h3-specs { font-size: 1.3rem; }
     .h4-specs { font-size: 1.1rem; }
   }
 
@@ -167,6 +167,12 @@
   @media only screen and (max-width: 565px) {
     .navlink-logo { height: 19px; }
   }
+  @media only screen and (max-width: 353px) {
+    .navbar {
+      gap: 8px;
+      padding: 5px;
+    }
+  }
 
 /* Footer */
   .footer {
@@ -195,14 +201,12 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 250px;
-    gap: 35px;
     padding: 25px;
+    height: max(75vh, 50px);
+    gap: max(10vh, 35px);
   }
   @media only screen and (max-width: 625px) {
     .intro {
-      height: 200px;
-      gap: 25px;
       padding: 15px;
     }
   }
@@ -821,10 +825,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin: 50px 0px 0px 0px;
     gap: 30px;
   }
   .greeting-text {
+    padding: 15px;
   }
   .greeting-image {
     display: flex;
@@ -908,10 +914,11 @@
     align-items: center;
     height: 20em;
     gap: 3em;
-    padding: 30px;
   }
   .bio-text {
-    width: 24em;
+    width: 27em;
+    max-width: 100vw;
+    padding: 25px;
   }
   @media only screen and (max-width: 625px) {
     .portrait-pic {
@@ -922,11 +929,8 @@
     }
   }
   @media only screen and (max-width: 450px) {
-    .bio {
-      padding: 10px;
-    }
     .bio-text {
-      width: 18em;
+      padding: 15px;
     }
     .portrait-pic img {
       width: 250px;
